--- a/iAGE_CRUD/iAGE_CRUD.csproj
+++ b/iAGE_CRUD/iAGE_CRUD.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Employee.cs" />
+    <Compile Include="EmployeeArgumentsParser.cs" />
     <Compile Include="EmployeesManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
