--- a/iAGE_CRUD/iAGE_CRUD.csproj
+++ b/iAGE_CRUD/iAGE_CRUD.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Employee.cs" />
     <Compile Include="EmployeeArgumentsParser.cs" />
     <Compile Include="EmployeesManager.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
