--- a/iAGE_CRUD/iAGE_CRUD.csproj
+++ b/iAGE_CRUD/iAGE_CRUD.csproj
@@ -47,10 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Argument.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="EmployeeArguments.cs" />
-    <Compile Include="EmployeeArgumentsParser.cs" />
+    <Compile Include="EmployeeParser.cs" />
     <Compile Include="EmployeesManager.cs" />
+    <Compile Include="OperationArgumentsParser.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
