--- a/SimpleUnitTest/SimpleUnitTest.csproj
+++ b/SimpleUnitTest/SimpleUnitTest.csproj
@@ -49,8 +49,10 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="TestFileStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestParsingArguments.cs" />
+    <Compile Include="TestValidationArguments.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\iAGE_CRUD\App.config">
