--- a/iAGE_CRUD/iAGE_CRUD.csproj
+++ b/iAGE_CRUD/iAGE_CRUD.csproj
@@ -47,16 +47,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Argument.cs" />
-    <Compile Include="Employee.cs" />
-    <Compile Include="EmployeeArguments.cs" />
-    <Compile Include="EmployeeParser.cs" />
-    <Compile Include="EmployeesManager.cs" />
-    <Compile Include="Enums.cs" />
-    <Compile Include="OperationArgumentsParser.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="Actions\Action.cs" />
+    <Compile Include="Actions\AddAction.cs" />
+    <Compile Include="Actions\DeleteAction.cs" />
+    <Compile Include="Actions\GetAction.cs" />
+    <Compile Include="Actions\GetAllAction.cs" />
+    <Compile Include="Actions\IAction.cs" />
+    <Compile Include="Actions\UpdateAction.cs" />
+    <Compile Include="Constants\ActionStrategy.cs" />
+    <Compile Include="Enums\ActionArguments.cs" />
+    <Compile Include="Enums\Actions.cs" />
+    <Compile Include="Model\Argument.cs" />
+    <Compile Include="Model\Employee.cs" />
+    <Compile Include="Model\EmployeeArguments.cs" />
+    <Compile Include="Parsers\ArgumentsParser.cs" />
+    <Compile Include="Parsers\ArgumentsValidator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Storage\FileStorageManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
